Revision history for {{$dist->name}}

{{$NEXT}}
  - Added max_payload_size to AnyEvent::WebSocket::Connection for limiting
    the size of received frames
  - Sending payloads larger than 65536 no longer causes an exception
  - Added parse_error to AnyEvent::WebSocket::Connection

0.36      2016-10-27 11:57:12 -0400
  - Production version functionally identical to the 0.35_02 release.

0.35_02   2016-10-25 13:04:54 -0400
  - Added http_headers attribute which allows you to provide additional
    arbitrary headers

0.35_01   2016-10-24 18:28:00 -0400
  - You may now specify the protocol version using the protocol_version
    attribute for AnyEvent::WebSocket::Client.  All protocol versions
    supported by Protocol::WebSocket should work.
  - Added subprotocol attribute for AnyEvent::WebSocket::Client

0.35      2016-08-04 13:47:36 -0400
  - Production version functionally identical to the 0.34_01 release.

0.34_01   2016-07-31 08:42:40 -0400
  - Fixed bug where read data could be discarded when in TLS mode.
    (gh#25 thanks Toshio Ito)

0.34      2016-07-26 14:04:52 -0400
  - Documentation improvements
  - Production version functionally identical to the 0.33_01 release.

0.33_01   2016-07-25 22:48:06 -0400
  - Added optional code and reason arguments to $connection->close (gh#23 thanks José Joaquín Atria)

0.33      2016-04-25 12:12:12 -0400
  - t/ae_ssl.t may now be skipped by setting ANYEVENT_WEBSOCKET_TEST_SKIP_SSL

0.32      2015-12-17 14:02:36 -0500
  - URI 1.53 or better has been required for a while (if not since 0.01)
    This is now reflected in the module metadata.
    Thanks to Fabien Wernli (faxm0dem) for the report.

0.31      2015-10-11 06:21:29 -0400
  - Removed deprecated methods for AnyEvent::WebSocket::Connection class:
    on_each_message
    on_next_message
    on_finish

0.30      2015-03-03 23:33:03 -0500
  - Require Moo 2.0, as older versions inadvertently turn on
    fatal warnings

0.29      2015-01-17 10:03:16 -0500