@@ -7,10 +7,7 @@ use Protocol::WebSocket::Frame;
 use Test::More;
 use FindBin ();
 use lib $FindBin::Bin;
-use testlib::Server;
 use testlib::Connection;
-
-testlib::Server->set_timeout;
 
 my $connection;
 
@@ -19,8 +16,7 @@ my $connection;
   my $message_cv = AE::cv;
   my $handle;
 
-  ($connection, $handle) = testlib::Connection->create_connection_and_handle({ max_payload_size => 65538});
-  note "connection.max_payload_size = @{[ $connection->max_payload_size ]}";
+  ($connection, $handle) = testlib::Connection->create_connection_and_handle({});
 
   my $frame = Protocol::WebSocket::Frame->new( max_payload_size => 9223372036854775807 );
   $handle->on_read(sub {
@@ -45,21 +41,8 @@ my $connection;
   
   sub send_message
   {
-    my($body,$cb) = @_;
-    my $cv = AE::cv;
-    if($cb)
-    {
-      $connection->on(next_message => sub {
-        $cb->(@_);
-        $cv->send;
-      });
-    }
-    my $frame = Protocol::WebSocket::Frame->new(
-      max_payload_size => 9223372036854775807,
-      buffer => $body,
-    );
-    $handle->push_write($frame->to_bytes);
-    $cv->recv if $cb;
+    my($body) = @_;
+    
   }
 
 }
@@ -71,7 +54,7 @@ subtest 'send payload with size > 65536' => sub {
   subtest 'plain string' => sub {
     eval { $connection->send($data) };
     is $@, '';
-    my $rmessage = get_next_message();
+    my $rmessage = next_message();
     ok $rmessage;
     is $rmessage->body, $data;
   };
@@ -82,7 +65,7 @@ subtest 'send payload with size > 65536' => sub {
     );
     eval { $connection->send($smessage) };
     is $@, '';
-    my $rmessage = get_next_message();
+    my $rmessage = next_message();
     ok $rmessage;
     is $rmessage->body, $data;
   };
@@ -92,32 +75,9 @@ subtest 'send payload with size > 65536' => sub {
 subtest 'receive payload with size > 65536' => sub {
 
   my $data = 'x' x 65537;
-
-  send_message($data, sub {
   
-    my($connection, $message) = @_;
-    is $message->body, $data;
   
-  });
-  
-};
 
-subtest 'receieve payload with size > max_payload_size' => sub {
-
-  my $data = 'x' x 65540;
-  my $here = 1;
-  my $cv = AE::cv;
-  
-  $connection->on(parse_error => sub {
-    my($connection, $error) = @_;
-    return unless $here;
-    ok $error, "error is: $error";
-    $cv->send;
-  });
-  send_message($data);
-  $cv->recv;
-
-  $here = 0;
 };
 
 done_testing;
